--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
+<style>
+    root {
+        text-align: center;
+    }
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #ece8e1;
+    }
+    img .logo {
+        width: 252;
+        height: 80;
+    }
+    
+</style>
+
 <html>
 <head>
     <title>Valorant Basic</title>
     <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
 </head>
 <header>
-    <img src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo"; style =" text-align: center";width="252"height="80" ;>
+    <img class="logo" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
 </header>
     <nav>
         <ul>
@@ -16,13 +31,7 @@
             <li><a href="Patch Notes.asp">Patch Notes</a></li>
         </ul>
     </nav>
-<style>
-    body {font-family: "Arial", Arial}
-    .mySlides {display: none}
-</style>
-
-<body bgcolor= "#ece8e1";style = "text-align:center" >
-    
+<body>
     <h1 >hello world</h1>
 
 </body>
