--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
-<style>
-    html {
-        text-align: center;
-    }
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: #ece8e1;
-    }
-    img .logo {
-        width: 252;
-        height: 80;
-    }
-    
-</style>
 
 <html>
 <head>
     <title>Valorant Basic</title>
     <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
+    <link rel="stylesheet" href="Styles.css">
 </head>
+<nav>
+    <ul>
+        <li><a href="#Homepage">Homepage</a></li>
+        <li><a href="#Basic_Knowledge">Basic Knowledge</a></li>
+        <li><a href="#Agent_Tips">Agent Tips</a></li>
+        <li><a href="#Maps">Maps</a></li>
+        <li><a href="#Patch_Notes">Patch Notes</a></li>
+    </ul>
+</nav>
 <header>
-    <img class="logo" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+    <br>
+    <img class="logo homepage" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+    <br><br>
+    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
 </header>
-    <nav>
-        <ul>
-            <li><a href="Homepage.asp">Homepage</a></li>
-            <li><a href="Basic Knowledge.asp">Basic Knowledge</a></li>
-            <li><a href="Agent Tips.asp">Agent Tips</a></li>
-            <li><a href="Maps.asp">Maps</a></li>
-            <li><a href="Patch Notes.asp">Patch Notes</a></li>
-        </ul>
-    </nav>
 <body>
-    <h1 >hello world</h1>
+    <h1 class="titles" id="Homepage">Introductions</h1>
+    <hr class="titles">
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
+    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+
+    <h1 class="titles" id="Bacic_Knowledge">Basic Knowledge</h1>
+    <hr class="titles">
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+
+
+    <h1 class="titles" id="Agent_Tips">Agent Tips</h1>
+    <hr class="titles">
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+
+    <h1 class="titles" id="Maps">Maps</h1>
+    <hr class="titles">
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+
+    <h1 class="titles" id="Patch_Notes">Patch_Notes</h1>
+    <hr class="titles">
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 </body>
 
 
