--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -8,11 +8,11 @@
 </head>
 <nav>
     <ul>
-        <li><a href="#Homepage">Homepage</a></li>
-        <li><a href="#Basic_Knowledge">Basic Knowledge</a></li>
-        <li><a href="#Agent_Tips">Agent Tips</a></li>
-        <li><a href="#Maps">Maps</a></li>
-        <li><a href="#Patch_Notes">Patch Notes</a></li>
+        <li><a href="/ValorantBasic.html">Homepage</a></li>
+        <li><a href="/Basic_Information.html">Basic Knowledge</a></li>
+        <li><a href="/Agent_Tips.html">Agent Tips</a></li>
+        <li><a href="/Maps.html">Maps</a></li>
+        <li><a href="/Patch_Notes.html">Patch Notes</a></li>
     </ul>
 </nav>
 <header>
