Dropdown Menu for Basic Knowledge or others

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -6,12 +6,20 @@
         <link rel="stylesheet" href="Styles.css">
     </head>
     <nav>
-        <ul>
-            <li><a href="/ValorantBasic.html">Homepage</a></li>
-            <li><a href="/Basic_Information.html">Basic Knowledge</a></li>
-            <li><a href="/Agent_Tips.html">Agent Tips</a></li>
-            <li><a href="/Maps.html">Maps</a></li>
-            <li><a href="/Patch_Notes.html">Patch Notes</a></li>
+        <ul class="nav">
+            <div class="nav"><a href="/ValorantBasic.html">Homepage</a></div>
+            <div class="nav">
+                <a href="/Basic_Information.html">Basic Knowledge</a>
+                <div class="DropdownMenu">
+                    <a href="/Basic_Information.html#Weapons">Weapons</a>
+                    <a href="/Basic_Information.html#Weapons">Something</a>
+                    <a href="/Basic_Information.html#Weapons">Else</a>
+                </div>
+            </div>
+    
+            <div class="nav"><a href="/Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="/Maps.html">Maps</a></div>
+            <div class="nav"><a href="/Patch_Notes.html">Patch Notes</a></div>
         </ul>
     </nav>
     <header>
