--- a/Maps.html
+++ b/Maps.html
@@ -6,12 +6,20 @@
         <link rel="stylesheet" href="Styles.css">
     </head>
     <nav>
-        <ul>
-            <li><a href="/ValorantBasic.html">Homepage</a></li>
-            <li><a href="/Basic_Information.html">Basic Knowledge</a></li>
-            <li><a href="/Agent_Tips.html">Agent Tips</a></li>
-            <li><a href="/Maps.html">Maps</a></li>
-            <li><a href="/Patch_Notes.html">Patch Notes</a></li>
+        <ul class="nav">
+            <div class="nav"><a href="/ValorantBasic.html">Homepage</a></div>
+            <div class="nav">
+                <a href="/Basic_Information.html">Basic Knowledge</a>
+                <div class="DropdownMenu">
+                    <a href="/Basic_Information.html#Weapons">Weapons</a>
+                    <a href="/Basic_Information.html#Weapons">Something</a>
+                    <a href="/Basic_Information.html#Weapons">Else</a>
+                </div>
+            </div>
+        
+            <div class="nav"><a href="/Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="/Maps.html">Maps</a></div>
+            <div class="nav"><a href="/Patch_Notes.html">Patch Notes</a></div>
         </ul>
     </nav>
     <header>
@@ -24,7 +32,7 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         <hr style="width: 70%; border-top: 3px solid;" align="center">
 
-        <ul class="listings four">
+        <ul class="listings_four">
             <div>
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
