--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <title>Valorant Basic</title>
-    <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
-    <link rel="stylesheet" href="Styles.css">
-</head>
-<nav>
-    <ul>
-        <li><a href="/ValorantBasic.html">Homepage</a></li>
-        <li><a href="/Basic_Information.html">Basic Knowledge</a></li>
-        <li><a href="/Agent_Tips.html">Agent Tips</a></li>
-        <li><a href="/Maps.html">Maps</a></li>
-        <li><a href="/Patch_Notes.html">Patch Notes</a></li>
-    </ul>
-</nav>
-<header>
-    <br>
-    <img class="logo homepage" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
-    <br><br>
-    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
-</header>
-
-<body>
-    <hr style="border-top: 3px solid darkgray">
-    <h1 class="titles" style="text-align: left; padding-left: 40px;">Patch Notes</h1>
-    <hr style="width: 20%; padding-left: 40px;" align="left">
+    <head>
+        <title>Valorant Basic</title>
+        <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
+        <link rel="stylesheet" href="Styles.css">
+    </head>
+    <nav>
+        <ul class="nav">
+            <div class="nav"><a href="/ValorantBasic.html">Homepage</a></div>
+            <div class="nav">
+                <a href="/Basic_Information.html">Basic Knowledge</a>
+                <div class="DropdownMenu">
+                    <a href="/Basic_Information.html#Weapons">Weapons</a>
+                    <a href="/Basic_Information.html#Weapons">Something</a>
+                    <a href="/Basic_Information.html#Weapons">Else</a>
+                </div>
+            </div>
     
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-</body>
+            <div class="nav"><a href="/Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="/Maps.html">Maps</a></div>
+            <div class="nav"><a href="/Patch_Notes.html">Patch Notes</a></div>
+        </ul>
+    </nav>
+    <header>
+        <br>
+        <img class="logo homepage" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+        <br><br>
+        <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+    </header>
+
+    <body>
+        <hr style="border-top: 3px solid darkgray">
+        <h1 class="titles" style="text-align: left; padding-left: 40px;">Patch Notes</h1>
+        <hr style="width: 20%; padding-left: 40px;" align="left">
+        
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    </body>
 
 
-<div></div>
+    <div></div>
 
 </html>
