--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -1,58 +1,72 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <title>Valorant Basic</title>
-    <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
-    <link rel="stylesheet" href="Styles.css">
-</head>
-<nav>
-    <ul>
-        <li><a href="/ValorantBasic.html">Homepage</a></li>
-        <li><a href="/Basic_Information.html">Basic Knowledge</a></li>
-        <li><a href="/Agent_Tips.html">Agent Tips</a></li>
-        <li><a href="/Maps.html">Maps</a></li>
-        <li><a href="/Patch_Notes.html">Patch Notes</a></li>
-    </ul>
-</nav>
-<header>
-    <br>
-    <img class="logo homepage" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
-    <br><br>
-    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
-</header>
-<body>
-    <h1 class="titles" id="Homepage">Introductions</h1>
-    <hr class="titles">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <head>
+        <title>Valorant Basic</title>
+        <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
+        <link rel="stylesheet" href="Styles.css">
+    </head>
+    <nav>
+        <ul class="nav">
+            <div class="nav"><a href="/ValorantBasic.html">Homepage</a></div>
+            <div class="nav">
+                <a href="/Basic_Information.html">Basic Knowledge</a>
+                <div class="DropdownMenu">
+                    <a href="/Basic_Information.html#Weapons">Weapons</a>
+                    <a href="/Basic_Information.html#Weapons">Something</a>
+                    <a href="/Basic_Information.html#Weapons">Else</a>
+                </div>
+            </div>
 
-    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+            <div class="nav"><a href="/Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="/Maps.html">Maps</a></div>
+            <div class="nav"><a href="/Patch_Notes.html">Patch Notes</a></div>
+        </ul>
+    </nav>
+    <header>
+        <br>
+        <img class="logo homepage" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+        <br><br>
+    </header>
+    <body>
+        <!--Introduction Section-->
+        <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
 
-    <h1 class="titles" id="Bacic_Knowledge">Basic Knowledge</h1>
-    <hr class="titles">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <h1 class="titles" id="Homepage">Introductions</h1>
+        <hr class="titles">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
-    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+        <!--Basic Knowledge Section-->
+        <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
 
+        <h1 class="titles" id="Bacic_Knowledge">Basic Knowledge</h1>
+        <hr class="titles">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
-    <h1 class="titles" id="Agent_Tips">Agent Tips</h1>
-    <hr class="titles">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
-
-    <h1 class="titles" id="Maps">Maps</h1>
-    <hr class="titles">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-    <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
-
-    <h1 class="titles" id="Patch_Notes">Patch_Notes</h1>
-    <hr class="titles">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-</body>
+        <!--Agent Tips Section-->
+        <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
 
 
-<div></div>
+        <h1 class="titles" id="Agent_Tips">Agent Tips</h1>
+        <hr class="titles">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+        <!--Maps Section-->
+        <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+
+        <h1 class="titles" id="Maps">Maps</h1>
+        <hr class="titles">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+        <!--Patch Notes Section-->
+        <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+        
+        <h1 class="titles" id="Patch_Notes">Patch_Notes</h1>
+        <hr class="titles">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    </body>
+
+
+    <div></div>
 
 </html>
