--- a/Maps.html
+++ b/Maps.html
@@ -24,7 +24,7 @@
     </nav>
     <header>
         <br>
-        <img class="logo others" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+        <img class="logo other" src="/Assets/ValorantBasic_logo.png" alt="valorant basic logo">
     </header>
     <body>
         <h1 class="titles">Maps</h1>
@@ -32,14 +32,14 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         <hr style="width: 70%; border-top: 3px solid;" align="center">
 
-        <ul class="listings_four">
-            <div>
+        <ul class="listings four">
+            <div class="map">
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
             </div>
-            <div>
+            <div class="map">
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
