--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -25,7 +25,7 @@
     </nav>
     <header>
         <br>
-        <img class="logo homepage" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+        <img class="logo homepage" src="/Assets/ValorantBasic_logo.png" alt="valorant basic logo">
         <br><br>
     </header>
     <body>
