+ content, |assests +weapons, bg, role

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -24,25 +24,25 @@
     </nav>
     <header>
         <br>
-        <img class="logo others" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+        <img class="logo homepage" src="Assets\ValorantBasic_logo.png" alt="valorant basic logo">
     </header>
     <body>
         <h1 class="titles" id="Agent_Tips">Agents</h1>
         <hr class="titles">
         <ul class="listings four">
             <ul class="items">
-                <img src="" alt="Duelist">
+                <img src="Assests/role/Duelist.png" alt="Duelist">
                 <h5>Duelist</h2>
             </ul>
             <ul class="items">
-                <img src="" alt="Controller">
+                <img src="Assests/role/Controller.png" alt="Controller">
                 <h5>Controller</h2>
             </ul><ul class="items">
-                <img src="" alt="Sentinal">
+                <img src="Assests/role/Sentinel.png" alt="Sentinel">
                 <h5>Sentinal</h2>
             </ul>
             <ul class="items">
-                <img src="" alt="Initiator">
+                <img src="Assests/role/Initiator.png" alt="Initiator">
                 <h5>Initiator</h2>
             </ul>
         </ul>
