--- a/Maps.html
+++ b/Maps.html
@@ -24,7 +24,7 @@
     </nav>
     <header>
         <br>
-        <img class="logo others" src="E:\Sebas\Coding\Website\NEW\WEBSITE\Logo\ValorantBasic_logo.png" alt="valorant basic logo">
+        <img class="logo homepage" src="Assets\ValorantBasic_logo.png" alt="valorant basic logo">
     </header>
     <body>
         <h1 class="titles">Maps</h1>
