--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -5,6 +5,7 @@
         <title>Valorant Basic</title>
         <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
         <link rel="stylesheet" href="Styles.css">
+        <script src="Events.js"></script>
     </head>
     <nav>
         <ul class="nav">
@@ -36,6 +37,25 @@
         <hr style="width: 20%; padding-left: 40px;" align="left">
         
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+        <!--Patch Notes-->
+        <div class="Patch_Notes">
+            <button class="Show" onclick="Show(0)">Patch Note 4.5</button>
+            <div class="PN_Content">
+                <p>MODE FAKA</p>
+            </div>
+
+            <button class="Show" onclick="Show(1)">Patch Note 4.4</button>
+            <div class="PN_Content">
+                <p>MODE FAKA</p>
+            </div>
+
+            <button class="Show" onclick="Show(2)">Patch Note 4.3</button>
+            <div class="PN_Content">
+                <p>MODE FAKA</p>
+            </div>
+        </div>
+
     </body>
 
 
