--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -1,9 +1,9 @@
-
 <html>
     <head>
         <title>Valorant Basic</title>
         <meta http-equiv="Content-Type" content="text/html"; charset= "UTF-8">
         <link rel="stylesheet" href="Styles.css">
+        <script src="Events.js"></script>
     </head>
     <nav>
         <ul class="nav">
