Minor Changes to Formating and Path

--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -9,24 +9,24 @@
     </head>
     <nav>
         <ul class="nav">
-            <div class="nav"><a href="/ValorantBasic.html">Homepage</a></div>
+            <div class="nav"><a href="ValorantBasic.html">Homepage</a></div>
             <div class="nav">
-                <a href="/Basic_Information.html">Basic Knowledge</a>
+                <a href="Basic_Information.html">Basic Knowledge</a>
                 <div class="DropdownMenu">
-                    <a href="/Basic_Information.html#Weapons">Weapons</a>
-                    <a href="/Basic_Information.html#Weapons">Something</a>
-                    <a href="/Basic_Information.html#Weapons">Else</a>
-                </div>
+                    <a href="Basic_Information.html#Weapons">Weapons</a>
+                    <a href="Basic_Information.html#Economy">Economy</a>
+                    <a href="Basic_Information.html#Match_Up">Match Up</a>
+                    <a href="Basic_Information.html#Team_Composition">Team Composition</a>                </div>
             </div>
     
-            <div class="nav"><a href="/Agent_Tips.html">Agent Tips</a></div>
-            <div class="nav"><a href="/Maps.html">Maps</a></div>
-            <div class="nav"><a href="/Patch_Notes.html">Patch Notes</a></div>
+            <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
+            <div class="nav"><a href="Maps.html">Maps</a></div>
+            <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
         </ul>
     </nav>
     <header>
         <br>
-        <img class="logo other" src="/Assets/ValorantBasic_logo.png" alt="valorant basic logo">
+        <img class="logo other" src="Assets/ValorantBasic_logo.png" alt="valorant basic logo">
         <br><br>
         <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
     </header>
