Breadcrumb Nav; remove  whitespace between divs

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -21,6 +21,9 @@
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
         </ul>
+        <div class="breadcrumbs">
+            <p><a href="ValorantBasic.html">Home</a> / Agent Tips</p>
+        </div>
     </nav>
     <header>
         <br>
