--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -21,6 +21,9 @@
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
         </ul>
+        <div class="breadcrumbs">
+            <p><a href="ValorantBasic.html">Home</a> / Basic Knowledge</p>
+        </div>
     </nav>
     <header>
         <br>
@@ -49,17 +52,19 @@
             
             <!--Weapons Gallery-->
             <ul class="listings four">
-                <ul class="items">
+                <div class="items">
+
                     <h5>Pistol</h2>
-                    <img class ="other" src="Assets/Weapons/Classic.png" alt="Classic" style="size: cover;">
-                </ul>
-                <ul class="items">
+                    <img class ="other" src="Assets/Weapons/Classic.png" alt="Classic">
+                </div>
+                <div class="items">
                     <h5>SMG</h2>
-                    <img class ="other" src="Assets/Weapons/Spectre.png" alt="Spectre" style="size: cover;">
-                </ul><ul class="items">
+                    <img class ="other" src="Assets/Weapons/Spectre.png" alt="Spectre">
+                </div>
+                <div class="items">
                     <h5>Rifles</h2>
-                    <img class ="other" src="Assets/Weapons/Vandal.png" alt="Vandal" style="background-size: cover;">
-                </ul>
+                    <img class ="other" src="Assets/Weapons/Vandal.png" alt="Vandal">
+                </div>
         </div>
         <!--Economy Section-->
         <hr style="width: 30%; border-top: 3px solid;" align="left">
