--- a/Maps.html
+++ b/Maps.html
@@ -22,6 +22,9 @@
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
         </ul>
+        <div class="breadcrumbs">
+            <p><a href="ValorantBasic.html">Home</a> / Maps</p>
+        </div>
     </nav>
     <header>
         <br>
